syntax = "proto3";

package user;

message UserRequest {
  string username = 1;
  string password = 2;
}

message UserResponse {
  string first_name = 1;
  string last_name = 2;
}

service UserService {
  rpc GetUser(UserRequest) returns (UserResponse);
}
